--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </header>
         <nav>
             <div class="logo">
-                <a href="index.html"><img src="https://picsum.photos/72/72/?random=10"></a>
+                <a href="index.html"><img src="/images/logo/logo-white72.svg"></a>
             </div>  
             <input type="checkbox" id="switch">          
             <div class="nav-icons">
@@ -123,91 +123,45 @@
             </div>
             <div class="news">
                 <h2>最新消息</h2>
-                <div class="news-container" id="container">
-                    <ul class="news-wrap" id="container-list">
-                        <li>
-                            <a href="news-detail.html" class="card">
-                                <div class="pic"><img src="images/home/news-1.png"></div>
-                                <h5>秋季新品！栗子蒙布朗吐司</h5>
-                                <div class="below-info">
-                                    <div class="tag"><span class="new">New</span></div>
-                                    <div class="time">2023.11.09</div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="card">
-                                <div class="pic"><img src="images/home/news-2.png"></div>
-                                <h5>美味多重享受！經典貝果組</h5>
-                                <div class="below-info">
-                                    <div class="tag"><span class="discount">優惠</span></div>
-                                    <div class="time">2023.10.25</div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="card">
-                                <div class="pic samepic">
-                                    <img src="images/home/news-3.png">
-                                    <span>店家休息公告</span>
-                                </div>
-                                <h5>日光小麥所休息公告</h5>
-                                <div class="below-info">
-                                    <div class="tag"><span class="inform">公告</span></div>
-                                    <div class="time">2023.10.13</div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="card">
-                                <div class="pic samepic">
-                                    <img src="images/home/news-3.png">
-                                    <span>店家休息公告</span>
-                                </div>
-                                <h5>日光小麥所休息公告</h5>
-                                <div class="below-info">
-                                    <div class="tag"><span class="inform">公告</span></div>
-                                    <div class="time">2023.10.13</div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="card">
-                                <div class="pic samepic">
-                                    <img src="images/home/news-3.png">
-                                    <span>店家休息公告</span>
-                                </div>
-                                <h5>日光小麥所休息公告</h5>
-                                <div class="below-info">
-                                    <div class="tag"><span class="inform">公告</span></div>
-                                    <div class="time">2023.10.13</div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="card">
-                                <div class="pic samepic">
-                                    <img src="images/home/news-3.png">
-                                    <span>店家休息公告</span>
-                                </div>
-                                <h5>日光小麥所休息公告</h5>
-                                <div class="below-info">
-                                    <div class="tag"><span class="inform">公告</span></div>
-                                    <div class="time">2023.10.13</div>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                    <div class="move-icon">
-                        <a href="#" class="left-btn">
-                            <img id="left-btn" src="images/home/home-news-left.svg" alt=""></i>                    
+                <div class="news-container">
+                    <div class="news-wrap">
+                        <a href="news-detail.html" class="card">
+                            <div class="pic"><img src="images/home/news-1.png"></div>
+                            <h5>秋季新品！栗子蒙布朗吐司</h5>
+                            <div class="below-info">
+                                <div class="tag"><span class="new">New</span></div>
+                                <div class="time">2023.11.09</div>
+                            </div>
                         </a>
-                        <a href="#" class="right-btn">
-                            <img id="right-btn" src="images/home/home-news-right.svg" alt=""></i>
+                        <a href="#" class="card">
+                            <div class="pic"><img src="images/home/news-2.png"></div>
+                            <h5>美味多重享受！經典貝果組</h5>
+                            <div class="below-info">
+                                <div class="tag"><span class="discount">優惠</span></div>
+                                <div class="time">2023.10.25</div>
+                            </div>
+                        </a>
+                        <a href="#" class="card">
+                            <div class="pic samepic">
+                                <img src="images/home/news-3.png">
+                                <span>店家休息公告</span>
+                            </div>
+                            <h5>日光小麥所休息公告</h5>
+                            <div class="below-info">
+                                <div class="tag"><span class="inform">公告</span></div>
+                                <div class="time">2023.10.13</div>
+                            </div>
                         </a>
                     </div>
-        
                 </div>
+                <!-- <div class="move-icon">
+                    <a href="#" class="left-btn">
+                        <img id="left-btn" src="images/home/home-news-left.svg" alt=""></i>                    
+                    </a>
+                    <a href="#" class="right-btn">
+                        <img id="right-btn" src="images/home/home-news-right.svg" alt=""></i>
+                    </a>
+                </div> -->
                 <a href="news.html"  class="more-btn">More</a>
             </div>
         </div>
@@ -228,7 +182,7 @@
             </div>
             <div class="mobile-footer">
                 <a href="#" class="foot-logo">
-                    <img src="https://picsum.photos/64/64/?random=10">
+                    <img src="/images/logo/logo-64.svg">
                 </a>
                 <div class="social-media">
                     <a href="#" class="fb">
@@ -253,6 +207,6 @@
             </a>
         </div>
     </div>
-    <script src="JS/scrolled.js"> </script>
+
 </body>
 </html>
