--- a/introduce-bread.html
+++ b/introduce-bread.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="CSS/introduce-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
+    <script src="/JS/jQuery/jquery-3.7.1.js"></script>
+    <script src="/JS/function.js"></script>
     <title>認識麵包 | 日光小麥所</title>
 </head>
 <body>
@@ -36,7 +38,7 @@
         </header>
         <nav>
             <div class="logo">
-                <a href="index.html"><img src="https://picsum.photos/72/72/?random=10"></a>
+                <a href="index.html"><img src="/images/logo/logo-white72.svg"></a>
             </div>  
             <input type="checkbox" id="switch">          
             <div class="nav-icons">
@@ -150,7 +152,7 @@
             </div>
             <div class="mobile-footer">
                 <a href="#" class="foot-logo">
-                    <img src="https://picsum.photos/64/64/?random=10">
+                    <img src="/images/logo/logo-64.svg">
                 </a>
                 <div class="social-media">
                     <a href="#" class="fb">
@@ -175,6 +177,5 @@
             </a>
         </div>
     </div>
-    <script src="JS/scrolled.js"> </script>
 </body>
 </html>
