--- a/news.html
+++ b/news.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="CSS/news-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
+    <script src="/JS/jQuery/jquery-3.7.1.js"></script>
+    <script src="/JS/function.js"></script>
     <title>最新消息 | 日光小麥所</title>
 </head>
 <body>
@@ -37,7 +39,7 @@
         </header>
         <nav>
             <div class="logo">
-                <a href="index.html"><img src="https://picsum.photos/72/72/?random=10"></a>
+                <a href="index.html"><img src="/images/logo/logo-white72.svg"></a>
             </div>  
             <input type="checkbox" id="switch">          
             <div class="nav-icons">
@@ -79,7 +81,7 @@
         <div class="head-bg">
             <h1>最新消息</h1>
         </div>
-        <div class="wrap">
+        <div class="wrap wraper">
             <div class="wrap-item illus">
                 <div class="bread-crumbs">
                     <ul>
@@ -242,7 +244,7 @@
             </div>
             <div class="mobile-footer">
                 <a href="#" class="foot-logo">
-                    <img src="https://picsum.photos/64/64/?random=10">
+                    <img src="/images/logo/logo-64.svg">
                 </a>
                 <div class="social-media">
                     <a href="#" class="fb">
@@ -267,6 +269,5 @@
             </a>
         </div>
     </div>
-    <script src="JS/scrolled.js"> </script>
 </body>
 </html>
