--- a/products-detail.html
+++ b/products-detail.html
@@ -38,7 +38,7 @@
         </header>
         <nav>
             <div class="logo">
-                <a href="index.html"><img src="https://picsum.photos/72/72/?random=10"></a>
+                <a href="index.html"><img src="/images/logo/logo-white72.svg"></a>
             </div>  
             <input type="checkbox" id="switch">          
             <div class="nav-icons">
@@ -100,10 +100,10 @@
                             </ul>
                             <ul id="contentButton"></ul>
                             <span id="pic-number"></span>
-                            <!-- <div class="move-icon">
-                                <a href id="prev"><img src="/images/home/home-news-left.svg" alt=""></a>
-                                <a href id="next"><img src="/images/home/home-news-right.svg" alt=""></a>
-                            </div> -->
+                            <div class="move-icon">
+                                <a id="prev"><i class="fa-solid fa-angle-left"></i></a>
+                                <a id="next"><i class="fa-solid fa-angle-right"></i></a>
+                            </div>
                         </div>
                         <div class="mdsize-pic">
                             <img class="full" src="images/product-detail/products-detail-lg.png" alt="">
@@ -199,7 +199,7 @@
             </div>
             <div class="mobile-footer">
                 <a href="#" class="foot-logo">
-                    <img src="https://picsum.photos/64/64/?random=10">
+                    <img src="/images/logo/logo-64.svg">
                 </a>
                 <div class="social-media">
                     <a href="#" class="fb">
@@ -224,6 +224,5 @@
             </a>
         </div>
     </div>
-    <!-- <script src="JS/scrolled.js"> </script> -->
 </body>
 </html>
