--- a/qna.html
+++ b/qna.html
@@ -38,7 +38,7 @@
         </header>
         <nav>
             <div class="logo">
-                <a href="index.html"><img src="https://picsum.photos/72/72/?random=10"></a>
+                <a href="index.html"><img src="/images/logo/logo-white72.svg"></a>
             </div>  
             <input type="checkbox" id="switch">          
             <div class="nav-icons">
@@ -187,7 +187,7 @@
             </div>
             <div class="mobile-footer">
                 <a href="#" class="foot-logo">
-                    <img src="https://picsum.photos/64/64/?random=10">
+                    <img src="/images/logo/logo-64.svg">
                 </a>
                 <div class="social-media">
                     <a href="#" class="fb">
@@ -212,6 +212,5 @@
             </a>
         </div>
     </div>
-    <!-- <script src="JS/scrolled.js"> </script> -->
 </body>
 </html>
