--- a/news.html
+++ b/news.html
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <a href="#" class="col-md-6 col-lg-4 col-sm-6 col-12">
+                    <a href="/news-detail.html" class="col-md-6 col-lg-4 col-sm-6 col-12">
                         <div class="card">
                             <div class="pic">
                                 <img src="images/news/mobile-top-news.png">
