--- a/products.html
+++ b/products.html
@@ -92,7 +92,7 @@
                 <div class="select-section">
                     <ul>
                         <li><a href="#" id="all">全部</a></li>
-                        <li><a href="#takeout" id="ts">吐司</a></li>
+                        <li><a href="#toast" id="ts">吐司</a></li>
                         <li><a href="#takeout" id="tk">手拿棒</a></li>
                         <li><a href="#bagel" id="bg">貝果</a></li>
                         <li><a href="#german-bread" id="gb">德國麵包</a></li>
