--- a/about.html
+++ b/about.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="CSS/nav-footer.css">
     <link rel="stylesheet" href="CSS/about-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
     <script src="/JS/jQuery/jquery-3.7.1.js"></script>
     <script src="/JS/function.js"></script>
+    
     <title>關於我們 | 日光小麥所</title>
 </head> 
 <body>
@@ -123,7 +126,7 @@
         </div>
         <footer>
             <div class="footer-area">
-                <a href="#" class="foot-logo">
+                <a href="index.html" class="foot-logo">
                     <img src="images/logo/logo-1113 2.svg">
                 </a>
                 <div class="foot-select">
@@ -137,7 +140,7 @@
                 </div>
             </div>
             <div class="mobile-footer">
-                <a href="#" class="foot-logo">
+                <a href="index.html" class="foot-logo">
                     <img src="/images/logo/logo-64.svg">
                 </a>
                 <div class="social-media">
