--- a/news.html
+++ b/news.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="CSS/grid.css">
     <link rel="stylesheet" href="CSS/news-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
     <script src="/JS/jQuery/jquery-3.7.1.js"></script>
     <script src="/JS/function.js"></script>
@@ -229,7 +231,7 @@
         </div>            
         <footer>
             <div class="footer-area">
-                <a href="#" class="foot-logo">
+                <a href="index.html" class="foot-logo">
                     <img src="images/logo/logo-1113 2.svg">
                 </a>
                 <div class="foot-select">
@@ -243,7 +245,7 @@
                 </div>
             </div>
             <div class="mobile-footer">
-                <a href="#" class="foot-logo">
+                <a href="index.html" class="foot-logo">
                     <img src="/images/logo/logo-64.svg">
                 </a>
                 <div class="social-media">
