--- a/about.html
+++ b/about.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="CSS/nav-footer.css">
     <link rel="stylesheet" href="CSS/about-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
     <script src="/JS/jQuery/jquery-3.7.1.js"></script>
     <script src="/JS/function.js"></script>
@@ -141,7 +139,7 @@
             </div>
             <div class="mobile-footer">
                 <a href="index.html" class="foot-logo">
-                    <img src="/images/logo/logo-64.svg">
+                    <img src="images/logo/logo-64.svg">
                 </a>
                 <div class="social-media">
                     <a href="#" class="fb">
