--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" href="CSS/nav-footer.css">
     <link rel="stylesheet" href="CSS/home-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
-    <script src="/JS/jQuery/jquery-3.7.1.js"></script>
-    <script src="/JS/function.js"></script>
+    <script src="./JS/jQuery/jquery-3.7.1.js"></script>
+    <script src="./JS/function.js"></script>
     <title>日光小麥所</title>
 </head>
 <body>
@@ -184,7 +183,7 @@
             </div>
             <div class="mobile-footer">
                 <a href="index.html" class="foot-logo">
-                    <img src="/images/logo/logo-64.svg">
+                    <img src="images/logo/logo-64.svg">
                 </a>
                 <div class="social-media">
                     <a href="#" class="fb">
