--- a/news-detail.html
+++ b/news-detail.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="CSS/nav-footer.css">
     <link rel="stylesheet" href="CSS/newsdetail-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
-    <script src="/JS/jQuery/jquery-3.7.1.js"></script>
-    <script src="/JS/function.js"></script>
+    <script src="./JS/jQuery/jquery-3.7.1.js"></script>
+    <script src="./JS/function.js"></script>
     <title>秋季新品 | 最新消息 | 日光小麥所</title>
 </head>
 <body>
@@ -141,7 +140,7 @@
             </div>
             <div class="mobile-footer">
                 <a href="index.html" class="foot-logo">
-                    <img src="/images/logo/logo-64.svg">
+                    <img src="images/logo/logo-64.svg">
                 </a>
                 <div class="social-media">
                     <a href="#" class="fb">
