--- a/introduce-bread.html
+++ b/introduce-bread.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/introduce-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
-    
+    <link rel="icon" href="logo.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
     <script src="./JS/jQuery/jquery-3.7.1.js"></script>
     <script src="./JS/function.js"></script>
