--- a/products.html
+++ b/products.html
@@ -93,16 +93,16 @@
                 </div>
                 <div class="select-section">
                     <ul>
-                        <li><a href="#" id="all">全部</a></li>
-                        <li><a href="#toast" id="ts">吐司</a></li>
-                        <li><a href="#takeout" id="tk">手拿棒</a></li>
-                        <li><a href="#bagel" id="bg">貝果</a></li>
-                        <li><a href="#german-bread" id="gb">德國麵包</a></li>
-                        <li><a href="#" id="fs">佛卡夏</a></li>
+                        <li><a href="#toast" id="all-btn">全部</a></li>
+                        <li><a href="#toast" class="category-btn" data-target-group=".toast-group">吐司</a></li>
+                        <li><a href="#takeout" class="category-btn" data-target-group=".takeout-group">手拿棒</a></li>
+                        <li><a href="#bagel" id="bg" class="category-btn" data-target-group=".bagel-group">貝果</a></li>
+                        <li><a href="#german-bread" class="category-btn" data-target-group=".germanbread-group">德國麵包</a></li>
+                        <li><a href="#">佛卡夏</a></li>
                     </ul>
                 </div>
-                <h3 id="toast" class="toast-group">吐司</h3>
-                <div class="row toast-group">                    
+                <h3 id="toast" class="toast-group food">吐司</h3>
+                <div class="row toast-group food">                    
                     <div class="col-12 col-lg-3 col-md-4 col-sm-6">
                         <a href="products-detail.html" class="card">
                             <div class="pic">
@@ -168,8 +168,8 @@
                         </a>
                     </div>
                 </div>
-                <h3 id="takeout" class="takeout-group">手拿棒</h3>
-                <div class="row takeout-group">
+                <h3 id="takeout" class="takeout-group food">手拿棒</h3>
+                <div class="row takeout-group food">
 
                     <div class="col-12 col-lg-3 col-md-4 col-sm-6">
                         <a href="#" class="card">
@@ -236,8 +236,8 @@
                         </a>
                     </div>
                 </div>
-                <h3 id="bagel" class="bagel-group">貝果</h3>
-                <div class="row bagel-group">
+                <h3 id="bagel" class="bagel-group food">貝果</h3>
+                <div class="row bagel-group food">
                     <div class="col-12 col-lg-3 col-md-4 col-sm-6">
                         <a href="#" class="card">
                             <div class="pic">
@@ -335,8 +335,8 @@
                         </a>
                     </div>
                 </div>
-                <h3 id="german-bread" class="germanbread-group">德國麵包</h3>
-                <div class="row germanbread-group">
+                <h3 id="german-bread" class="germanbread-group food">德國麵包</h3>
+                <div class="row germanbread-group food">
                     
                     <div class="col-12 col-lg-3 col-md-4 col-sm-6">
                         <a href="#" class="card">
