--- a/products-detail.html
+++ b/products-detail.html
@@ -27,8 +27,9 @@
                         <li><a href="products.html">購買麵包</a></li>
                         <li><a href="introduce-bread.html">認識麵包</a></li>
                         <li><a href="qna.html">常見問題</a></li>
-                        <li><a href="#">
+                        <li><a href="#" id="shop-cart">
                             <i class="fa-solid fa-cart-shopping" style="color: #401202;"></i>
+                            <div class="cart-num"></div>
                         </a></li>
                         <li><a href="#">
                             <i class="fa-solid fa-user" style="color: #401202;"></i>
@@ -149,7 +150,7 @@
                             </div>
                         </div>
                         <div class="btn">
-                            <button >加入購物車</button>
+                            <button id="add-cart" >加入購物車</button>
                         </div>
                     </div>
                 </div>
