alter buyAmount to  sessionStorage andother page, fix index news part

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
                         <li><a href="products.html">購買麵包</a></li>
                         <li><a href="introduce-bread.html">認識麵包</a></li>
                         <li><a href="qna.html">常見問題</a></li>
-                        <li><a href="#">
+                        <li><a href="#" id="shop-cart">
                             <i class="fa-solid fa-cart-shopping" style="color: #401202;"></i>
+                            <div class="cart-num"></div>
                         </a></li>
                         <li><a href="#">
                             <i class="fa-solid fa-user" style="color: #401202;"></i>
